Prevent scroll to refresh on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,6 @@
 
 /* Global styles */
 * {
-  margin: 0px;
-  padding: 0px;
   // Font
   font-family: Roboto, sans-serif;
   -webkit-font-smoothing: auto;
@@ -21,6 +19,20 @@
   -webkit-text-rendering: optimizeLegibility;
   // Tap highlight color
   -webkit-tap-highlight-color: transparent;
+}
+
+body {
+  display: flex;
+  flex: 1 0 auto;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
 }
 
 /* Perfect Scrollbar Fix Styles to Work Perfectly on all devices */
